Verificaciones, endpoints crear, actualizar, get

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8082
+
+MONGODB_CNN=mongodb+srv://user_cafe_node:MzD9lUryzGzpzNoo@clusterdecafe.q0gs8.mongodb.net/cafeDB
+
+USER_CLUSTER=user_cafe_node
+PASS_CLUSTER=MzD9lUryzGzpzNoo
